# apartment-bot

./: README.md  environment.yml  pyproject.toml
apartment_bot/: apartment_scraper.py
notebooks/: 1.0-os-initial-selenium-exploration.ipynb  Test_Selenium.ipynb  apartScraperTest.ipynb
utils/: apartmentScraper.py
