[tool.poetry]
name = "apartment-bot"
version = "0.1.0"
description = ""
authors = ["Ozan Sahin <o.sahin@cartelsol.com>"]
readme = "README.md"
packages = [{include = "apartment_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
ipympl = "^0.9.3"
openpyxl = "^3.1.2"
aiosmtplib = "^2.0.1"
python-dotenv = "^1.0.0"
selenium = "^4.9.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pylint = "^2.17.2"
black = "^23.3.0"
jupyterlab = "^3.6.3"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
